Board Controller 방어 로직 수정